done just few corrections
