# be/src/routes/bookings.ts
@@ -8,5 +8,6 @@ router.use(authenticate);
 
 router.post('/intent', BookingsController.createBookingIntent);
 router.post('/confirm', BookingsController.confirmBooking);
+router.put('/:id/cancel', BookingsController.cancelBooking);
 
 export default router;
